[gd_scene load_steps=15 format=2]

[ext_resource path="res://UIMain/MainTheme.tres" type="Theme" id=1]
[ext_resource path="res://UIMain/TroopTitle/Background.png" type="Texture" id=2]
[ext_resource path="res://UIMain/TroopTitle/StateMask.png" type="Texture" id=3]
[ext_resource path="res://UIMain/TroopTitle/Flag.png" type="Texture" id=4]
[ext_resource path="res://UIMain/TroopTitle/Combativity.png" type="Texture" id=5]
[ext_resource path="res://UIMain/TroopTitle/Faction.png" type="Texture" id=6]
[ext_resource path="res://UIMain/TroopTitle/Morale.png" type="Texture" id=7]
[ext_resource path="res://Fonts/FZLB_GBK.TTF" type="DynamicFontData" id=8]
[ext_resource path="res://UIMain/TroopTitle/ActionUndone.png" type="Texture" id=9]
[ext_resource path="res://UIMain/TroopTitle/FoodNormal.png" type="Texture" id=10]
[ext_resource path="res://UIMain/TroopTitle/TroopTitle.gd" type="Script" id=11]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 27, 54 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 27, 54 )

[sub_resource type="DynamicFont" id=1]
size = 14
font_data = ExtResource( 8 )

[node name="TroopTitle" type="Control"]
margin_right = 90.0
margin_bottom = 56.0
theme = ExtResource( 1 )
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
margin_right = 90.0
margin_bottom = 56.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Morale" type="TextureRect" parent="Background"]
anchor_bottom = 1.0
margin_top = 2.0
margin_right = 27.0
grow_vertical = 0
rect_pivot_offset = Vector2( 0, 54 )
texture = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Combativity" type="TextureRect" parent="Background"]
anchor_bottom = 1.0
margin_left = 25.0
margin_top = 2.0
margin_right = 52.0
margin_bottom = 3.8147e-06
grow_vertical = 0
rect_pivot_offset = Vector2( 0, 54 )
texture = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatusMask" type="TextureRect" parent="Background"]
margin_right = 90.0
margin_bottom = 56.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeaderName" type="Label" parent="Background"]
margin_left = 40.0
margin_top = 22.0
margin_right = 90.0
margin_bottom = 36.0
text = "耒果田"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TroopQuantity" type="Label" parent="Background"]
margin_left = 52.0
margin_top = 38.0
margin_right = 90.0
margin_bottom = 56.0
text = "10000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActionStatus" type="TextureRect" parent="Background"]
margin_left = 40.0
margin_top = 42.0
margin_right = 52.0
margin_bottom = 54.0
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FoodStatus" type="TextureRect" parent="Background"]
margin_left = 52.0
margin_top = 8.0
margin_right = 64.0
margin_bottom = 22.0
texture = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FlagBackground" type="TextureRect" parent="."]
margin_top = -25.0
margin_right = 40.0
margin_bottom = 15.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FlagFaction" type="TextureRect" parent="FlagBackground"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FlagText" type="Label" parent="FlagBackground"]
margin_left = 2.0
margin_top = 10.0
margin_right = 40.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "耒"
__meta__ = {
"_edit_use_anchors_": false
}
